--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^4.0.0",
-    "css-loader": "^0.24.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-config-airbnb-base": "^5.0.3",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
     "globby": "^6.1.0",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^7.0.1",
@@ -45,16 +45,16 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "supertest": "^3.0.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "^5.70.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
-    "axios": "^0.16.2",
+    "axios": "^0.26.1",
     "babel-loader": "^7.0.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.10",
     "co": "^4.6.0",
     "compression": "^1.7.0",
     "cors": "^2.8.5",
@@ -66,7 +66,7 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "fs": "^0.0.1-security",
-    "jsonwebtoken": "^7.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash.chunk": "^4.2.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
@@ -74,23 +74,23 @@
     "mongoose": "^5.13.2",
     "morgan": "^1.9.0",
     "prop-types": "^15.5.10",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.6.0",
+    "react": "^17.0.2",
+    "react-addons-css-transition-group": "^0.14.8",
     "react-circular-progressbar": "0.1.5",
-    "react-dom": "^15.4.1",
+    "react-dom": "^17.0.2",
     "react-input-range": "^1.1.4",
     "react-onclickoutside": "^6.1.1",
     "react-redux": "^5.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.0",
-    "react-toastify": "^1.7.0",
+    "react-toastify": "^8.2.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "superagent": "^7.1.1",
     "sweetalert2": "^11.4.6",
-    "validator": "^8.0.0"
+    "validator": "^13.7.0"
   }
 }
